# raxis

./: .env.example  .gitignore  BUDGET_AUDIT_iter62.md  README.md  RETURN_NOTE_TO_PARENT.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
raxis/: .gitignore  CHANGELOG.md  CLA.md  Cargo.toml  INVESTORS.md  LICENSE  POSITIONING.md  README.md  RETURN_NOTE_TO_PARENT.md  RETURN_NOTE_TO_PARENT_iter66_async_store_lock_sweep.md  configuring-witnesses.md  e2e-realistic-dry-run.txt  install.sh  kernel-feedback-flows.md
raxis/.cargo/: config.toml
raxis/.github/: PULL_REQUEST_TEMPLATE.md
raxis/cli/: Cargo.toml
raxis/cli/src/: closeness.rs  conn.rs  errors.rs  main.rs  operator_display.rs  reveal.rs  signing.rs
raxis/cli/templates/: plan_bugfix.toml  plan_dependency_upgrade.toml  plan_experiment.toml  plan_feature.toml  plan_migration.toml
raxis/cli/tests/: closeness_smoke.rs  credential_cli.rs  genesis_emitter_round_trip.rs  kernel_install_cli.rs  operator_wire_shape.rs  plan_fmt_cli.rs  plan_sign_roundtrip.rs  version_cli.rs
raxis/crates/artifact-store/: Cargo.toml
raxis/crates/audit/: Cargo.toml
raxis/crates/canonical-images/: Cargo.toml  build.rs
raxis/crates/credential-proxy-aws/: Cargo.toml
raxis/crates/credential-proxy-azure/: Cargo.toml
raxis/crates/credential-proxy-cloud-shared/: Cargo.toml
raxis/crates/credential-proxy-gcp/: Cargo.toml
raxis/crates/credential-proxy-http/: Cargo.toml
raxis/crates/credential-proxy-manager/: Cargo.toml
raxis/crates/credential-proxy-mongodb/: Cargo.toml
raxis/crates/credential-proxy-mssql/: Cargo.toml
raxis/crates/credential-proxy-mysql/: Cargo.toml
raxis/crates/credential-proxy-postgres/: Cargo.toml
raxis/crates/credential-proxy-redis/: Cargo.toml
raxis/crates/credential-proxy-smtp/: Cargo.toml
raxis/crates/credential-proxy-sql-shared/: Cargo.toml
raxis/crates/crypto/: Cargo.toml
raxis/crates/dashboard/: Cargo.toml
raxis/crates/dashboard-kernel/: Cargo.toml
raxis/crates/dev-signing-key/: Cargo.toml
raxis/crates/domain/: Cargo.toml
raxis/crates/domain-git/: Cargo.toml
raxis/crates/egress-admission/: Cargo.toml
raxis/crates/gateway-substrate/: Cargo.toml
raxis/crates/genesis-tools/: Cargo.toml
raxis/crates/image-builder/: Cargo.toml
raxis/crates/image-cache/: Cargo.toml
raxis/crates/image-manifest/: Cargo.toml
raxis/crates/initramfs-builder/: Cargo.toml
raxis/crates/ipc/: Cargo.toml
raxis/crates/isolation/: Cargo.toml
raxis/crates/isolation-apple-vz/: Cargo.toml
raxis/crates/isolation-firecracker/: Cargo.toml
raxis/crates/ksb/: Cargo.toml
raxis/crates/observability/: Cargo.toml
raxis/crates/plan-credentials/: Cargo.toml
raxis/crates/planner-core/: Cargo.toml
raxis/crates/planner-executor/: Cargo.toml
raxis/crates/planner-orchestrator/: Cargo.toml
raxis/crates/planner-reviewer/: Cargo.toml
raxis/crates/policy/: Cargo.toml
raxis/crates/prompts/: Cargo.toml
raxis/crates/raxis-credentials/: Cargo.toml
raxis/crates/raxis-credentials-file/: Cargo.toml
raxis/crates/runtime/: Cargo.toml
raxis/crates/session-spawn/: Cargo.toml
raxis/crates/store/: Cargo.toml
raxis/crates/supervisor/: Cargo.toml
raxis/crates/test-support/: Cargo.toml
raxis/crates/tool-authoring/: Cargo.toml
raxis/crates/tproxy-protocol/: Cargo.toml
raxis/crates/types/: Cargo.toml
raxis/crates/verifier/: Cargo.toml
raxis/crates/verifier-no-secrets/: Cargo.toml
raxis/crates/verifier-stub/: Cargo.toml
raxis/crates/vsock-loopback/: Cargo.toml
raxis/crates/worktree-provision/: Cargo.toml
raxis/crates/worktree-staging/: Cargo.toml
raxis/dashboard-fe/: .gitignore  QA-CHECKLIST.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
raxis/dashboard-fe/src/: App.tsx  main.tsx  vite-env.d.ts
raxis/demo-e2e-sample/: AVF_DEMO.md  README.md  setup.sh
raxis/demo-e2e-sample/plan/: plan.toml
raxis/fixtures/: dag_plan.toml  gated_plan.toml  integration_plan.toml  minimal_plan.toml
raxis/gateway/: Cargo.toml
raxis/gateway/src/: backend.rs  dispatch.rs  env.rs  http_backend.rs  lib.rs  main.rs  policy_view.rs  runtime.rs
raxis/gateway/tests/: gateway_roundtrip.rs
raxis/guides/: CONCEPTS.md  README.md  SETUP.md
raxis/guides/getting-started/: 00-overview.md  01-prereqs.md  02-first-initiative.md  03-dashboard-tour.md  04-troubleshooting.md  README.md
raxis/guides/operator/: 18-host-hygiene.md  20-dashboard-credential-reveal.md  21-airgap-a3-egress-allowlist.md
raxis/guides/patterns/: panel-review.md  single-executor-reviewer.md  structured-debate.md
raxis/guides/recipes/: README.md
raxis/guides/scenarios/: README.md
raxis/images/: .gitignore  README.md
raxis/images/executor-starter/: verify.sh  (+2 more)
raxis/installer/: README.md
raxis/kernel/: Cargo.toml
raxis/launchd/: com.raxis.hygiene.plist
raxis/legacy/: naming-rationale.md
raxis/live-e2e/: Cargo.toml  README.md  docker-compose.airgap-a3.yml  docker-compose.e2e.yml  docker-compose.extended.e2e.yml  inspect-iter.sh
raxis/perspectives/: README.md  autonomous-egm-manifesto.md  case-against-raxis.md  naming-rationale.md  need-for-cj-brain.md  raxis-concept.md  raxis-defense.md
raxis/pusher/: Cargo.toml
raxis/raxis-concepts/: 01-claims-and-gates.md  02-intent-admission.md  03-credential-proxies.md  04-delegations-and-authority.md  05-lanes-and-budgets.md  06-audit-chain.md  07-escalations.md  08-sessions-and-isolation.md  09-policy-configuration.md  10-v2-orchestration.md  11-glossary.md  README.md
raxis/release/: README.md  raxis.entitlements
raxis/scripts/: ascii-to-mermaid.py  check-no-real-anthropic-key.sh  iter62-wip-mermaid-rescue.json  linkify-md.py  test_linkify_md.py
raxis/specs/: README.md  SPEC_PARITY_AUDIT_20260513.md  architectural-tensions.md  design-decisions.md  invariants.md  iter63-followups.md  iter65-followups.md  iter67-followups.md  networking.md  paradigm.md
raxis/systemd/: raxis-hygiene.service  raxis-hygiene.timer
raxis/tproxy/: Cargo.toml
raxis/xtask/: Cargo.toml
(+1356 files in other folders)
