# RAXIS — standalone Rust workspace
# This workspace is independent of the aegis-ai root workspace.
# It has no dependency on any other aegis-ai crate.
#
# Workspace layout matches specs/v1/philosophy.md §1.5.
# All implementation crates are stubs until spec review is complete.

[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/ipc",
    "crates/store",
    "crates/policy",
    "crates/crypto",
    "crates/audit",
    "crates/genesis-tools",
    "crates/test-support",
    "crates/verifier-stub",
    "kernel",
    "cli",
    "gateway",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
authors     = ["RAXIS authors"]
repository  = "https://github.com/chika5105/aegis-ai"

[workspace.dependencies]
# Will be pinned before first implementation sprint
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
ed25519-dalek = "2"
rand_core     = "0.6"
# Cryptographic OS randomness. Used by every crate that must mint an Ed25519
# seed, session token, lineage id, etc. Always invoked via the
# `try_random_bytes(...) -> Result<(), CryptoError::Rng>` shim — never via a
# panic-on-failure or silently-zero variant. See cli-ceremony.md §4.2 step 2.
# `std` feature pulled in so `getrandom::Error` implements `std::error::Error`
# (required for `#[from]` on our thiserror enum).
getrandom   = { version = "0.2", features = ["std"] }
sha2        = "0.10"
hex         = "0.4"
uuid        = { version = "1", features = ["v4", "serde"] }
toml        = "0.8"
glob        = "0.3"
anyhow      = "1"
thiserror   = "1"

# Fast non-cryptographic hash for kernel-internal maps where keys are
# either small integers or short, **non-user-controllable** strings —
# typically constants like lane_id, gate_type, or capability_class
# enumerated by the loaded policy. Per §2.3 "Hashing strategy"
# in kernel-core.md, FxHashMap is the default hash for these call
# sites; `std::collections::HashMap` (SipHash) is reserved for any
# map whose keys originate from untrusted IPC frames or planner-
# supplied content, where SipHash's HashDoS resistance matters.
rustc-hash  = "1.1"

# IPC wire codec. Pinned to 2.0.1 (the last release from upstream bincode-org
# before that organisation archived in August 2025). Configured at every
# call-site with `bincode::config::standard()` — see specs/v1/peripherals.md
# §3 opening normative note for the byte-exact framing contract.
#
# Why 2.0.1 and not 3.x: the 3.x line on crates.io is from a downstream fork
# (Apich-Organization/bincode-next) whose `config::standard()` defaults are
# wire-INCOMPATIBLE with 2.x — only `config::legacy()` round-trips. v1 pins
# 2.0.1 because (a) it is the last release from the original maintainer and
# the de-facto stable artifact the wider Rust ecosystem currently consumes,
# (b) `config::standard()` is the minimal, varint-encoded, named configuration
# we want on the wire, and (c) staying on 2.x defers the codec-fork question
# to v2 instead of binding the protocol to an unaudited downstream organisation.
# The first implementation sprint MUST re-evaluate this pin against the state
# of the post-archival ecosystem at that time; any change to the codec or its
# config requires a peripherals.md §3 amendment AND a wire-compat test that
# round-trips every IpcMessage variant against a 2.0.1 baseline.
bincode     = { version = "=2.0.1", features = ["serde"] }

# Workspace-internal crates
raxis-types  = { path = "crates/types" }
raxis-ipc    = { path = "crates/ipc" }
raxis-store  = { path = "crates/store" }
raxis-policy = { path = "crates/policy" }
raxis-crypto = { path = "crates/crypto" }
raxis-audit-tools = { path = "crates/audit" }
raxis-genesis-tools = { path = "crates/genesis-tools" }
raxis-verifier-stub = { path = "crates/verifier-stub" }
