# RAXIS — standalone Rust workspace
# This workspace is independent of the aegis-ai root workspace.
# It has no dependency on any other aegis-ai crate.
#
# Workspace layout matches specs/v1/philosophy.md §1.5.
# All implementation crates are stubs until spec review is complete.

[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/ipc",
    "crates/store",
    "crates/policy",
    "crates/crypto",
    "crates/audit",
    "crates/raxis-credentials",
    "crates/raxis-credentials-file",
    "crates/credential-proxy-postgres",
    "crates/credential-proxy-http",
    "crates/credential-proxy-smtp",
    "crates/credential-proxy-redis",
    "crates/credential-proxy-aws",
    "crates/credential-proxy-gcp",
    "crates/credential-proxy-azure",
    "crates/credential-proxy-mysql",
    "crates/credential-proxy-mongodb",
    "crates/credential-proxy-mssql",
    "crates/credential-proxy-manager",
    "crates/plan-credentials",
    "crates/tproxy-protocol",
    "crates/egress-admission",
    "crates/gateway-substrate",
    "tproxy",
    "crates/genesis-tools",
    "crates/isolation",
    "crates/isolation-apple-vz",
    "crates/isolation-firecracker",
    "crates/runtime",
    "crates/test-support",
    "crates/verifier-stub",
    "crates/domain",
    "crates/domain-git",
    "crates/prompts",
    "crates/canonical-images",
    "crates/image-manifest",
    "crates/image-builder",
    "crates/worktree-provision",
    "crates/worktree-staging",
    "crates/session-spawn",
    "crates/image-cache",
    "crates/ksb",
    "crates/planner-core",
    "crates/planner-orchestrator",
    "crates/planner-executor",
    "crates/planner-reviewer",
    "crates/artifact-store",
    "crates/dashboard",
    "crates/dashboard-kernel",
    "crates/observability",
    "kernel",
    "cli",
    "gateway",
    "live-e2e",
    "pusher",
    "xtask",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "SSPL-1.0"
authors     = ["RAXIS authors"]
repository  = "https://github.com/chika5105/aegis-ai"

[workspace.dependencies]
# Will be pinned before first implementation sprint
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
# Real HTTP client used by `raxis-gateway::backend::HttpBackend` for
# outbound provider calls (Anthropic, etc.). `rustls-tls` keeps us off
# the system OpenSSL/Schannel and pins TLS to a single audited
# implementation. `gzip` is pulled in because Anthropic responses can
# come back compressed when the operator's policy permits the
# `accept-encoding: gzip` header. `json` is intentionally NOT pulled
# in — the gateway treats every response body as opaque bytes per
# `peripherals.md` §3.2 ("the gateway does NOT parse provider response
# bodies"); JSON deserialisation is the agent runtime's concern.
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
ed25519-dalek = "2"
rand_core     = "0.6"
# Cryptographic OS randomness. Used by every crate that must mint an Ed25519
# seed, session token, lineage id, etc. Always invoked via the
# `try_random_bytes(...) -> Result<(), CryptoError::Rng>` shim — never via a
# panic-on-failure or silently-zero variant. See cli-ceremony.md §4.2 step 2.
# `std` feature pulled in so `getrandom::Error` implements `std::error::Error`
# (required for `#[from]` on our thiserror enum).
getrandom   = { version = "0.2", features = ["std"] }
sha2        = "0.10"
# HMAC-SHA256 for the C5 sidecar protocol's per-request authentication
# (extensibility-traits.md §9A.7A). Pinned to the RustCrypto-aligned
# 0.12 line which uses the same `digest::Mac` traits as `sha2`.
hmac        = "0.12"
hex         = "0.4"
# Pure-Rust SHA-1 used by the MySQL `mysql_native_password` upstream
# scramble (legacy upstreams) and the `caching_sha2_password` RSA-OAEP
# digest. Pinned to RustCrypto-aligned 0.10 so the trait surfaces
# match `sha2`.
sha1        = "0.10"
# Pure-Rust RSA used by the V2 MySQL `caching_sha2_password` upstream
# auth path (`v2_extended_gaps.md §2.3` / RFC 8017 RSAES-OAEP) when
# the proxy needs to RSA-OAEP-encrypt the user's password against
# the server's public key on a cold-cache full-auth handshake.
# Default features pulled in (`std`, `pem`) so the proxy can parse
# the server's PEM-encoded RSA public key directly. Pinned to the
# 0.9 line — the same line `rustls-native-certs` consumes
# transitively, so adding this here does not introduce a second
# RustCrypto-RSA version into the build graph.
rsa         = "0.9"
# PBKDF2-HMAC-SHA256 for the V2 MongoDB SCRAM-SHA-256 upstream auth
# path (`v2_extended_gaps.md §2.2` / RFC 7677). Pinned to the
# RustCrypto-aligned 0.12 line so the `Mac` trait surface matches
# `hmac` 0.12. `default-features = false` keeps the dependency
# surface small (no parallel rayon impl).
pbkdf2      = { version = "0.12", default-features = false, features = ["hmac"] }
# Base64 used by the SCRAM client for `client-final-message`'s
# `p=<base64(client_proof)>` and the server's `s=<base64(salt)>`
# / `v=<base64(server_signature)>` decoding. Pinned to the 0.22 line
# which is what `reqwest` already pulls in transitively, so we don't
# fork the base64 graph.
base64      = "0.22"
uuid        = { version = "1", features = ["v4", "v7", "serde"] }
toml        = "0.8"
glob        = "0.3"
anyhow      = "1"
thiserror   = "1"
# `async-trait` is required for `DomainAdapter` (the trait has async
# methods; `async fn` in traits became stable in 1.75 but bringing
# back the dyn-trait support requires `async-trait` until the
# stabilisation of "dyn AsyncFn" lands). Pinned to the long-stable
# 0.1 line.
async-trait = "0.1"
# Wallclock timestamps in audit-shaped types (DomainCommitReceipt,
# audit retention deadlines). `chrono` is pinned to the 0.4 line which
# has been API-stable since 2018; we use only the `serde` and `clock`
# features.
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Fast non-cryptographic hash for kernel-internal maps where keys are
# either small integers or short, **non-user-controllable** strings —
# typically constants like lane_id, gate_type, or capability_class
# enumerated by the loaded policy. Per §2.3 "Hashing strategy"
# in kernel-core.md, FxHashMap is the default hash for these call
# sites; `std::collections::HashMap` (SipHash) is reserved for any
# map whose keys originate from untrusted IPC frames or planner-
# supplied content, where SipHash's HashDoS resistance matters.
rustc-hash  = "1.1"

# Lock-free Arc swap for atomic in-place visibility flips of large
# read-mostly structures (the loaded policy bundle and provider allowlist
# cache, both swapped on `policy_manager::advance_epoch`). Pinned to the
# `1.x` line — the API has been stable since 2019 and we use only
# `ArcSwap::new`, `load`, `load_full`, and `store`.
arc-swap    = "1"

# IPC wire codec. Pinned to 2.0.1 (the last release from upstream bincode-org
# before that organisation archived in August 2025). Configured at every
# call-site with `bincode::config::standard()` — see specs/v1/peripherals.md
# §3 opening normative note for the byte-exact framing contract.
#
# Why 2.0.1 and not 3.x: the 3.x line on crates.io is from a downstream fork
# (Apich-Organization/bincode-next) whose `config::standard()` defaults are
# wire-INCOMPATIBLE with 2.x — only `config::legacy()` round-trips. v1 pins
# 2.0.1 because (a) it is the last release from the original maintainer and
# the de-facto stable artifact the wider Rust ecosystem currently consumes,
# (b) `config::standard()` is the minimal, varint-encoded, named configuration
# we want on the wire, and (c) staying on 2.x defers the codec-fork question
# to v2 instead of binding the protocol to an unaudited downstream organisation.
# The first implementation sprint MUST re-evaluate this pin against the state
# of the post-archival ecosystem at that time; any change to the codec or its
# config requires a peripherals.md §3 amendment AND a wire-compat test that
# round-trips every IpcMessage variant against a 2.0.1 baseline.
bincode     = { version = "=2.0.1", features = ["serde"] }

# Workspace-internal crates
raxis-types  = { path = "crates/types" }
raxis-ksb    = { path = "crates/ksb" }
raxis-ipc    = { path = "crates/ipc" }
raxis-store  = { path = "crates/store" }
raxis-policy = { path = "crates/policy" }
raxis-crypto = { path = "crates/crypto" }
raxis-audit-tools       = { path = "crates/audit" }
raxis-credentials       = { path = "crates/raxis-credentials" }
raxis-credentials-file  = { path = "crates/raxis-credentials-file" }
raxis-tproxy-protocol   = { path = "crates/tproxy-protocol" }
raxis-egress-admission  = { path = "crates/egress-admission" }
raxis-tproxy            = { path = "tproxy" }
raxis-gateway-substrate = { path = "crates/gateway-substrate" }
raxis-genesis-tools     = { path = "crates/genesis-tools" }
raxis-isolation         = { path = "crates/isolation" }
raxis-isolation-apple-vz = { path = "crates/isolation-apple-vz" }
raxis-isolation-firecracker = { path = "crates/isolation-firecracker" }
raxis-runtime           = { path = "crates/runtime" }
raxis-verifier-stub     = { path = "crates/verifier-stub" }
raxis-domain            = { path = "crates/domain" }
raxis-domain-git        = { path = "crates/domain-git" }
raxis-prompts           = { path = "crates/prompts" }
raxis-canonical-images  = { path = "crates/canonical-images" }
raxis-image-manifest    = { path = "crates/image-manifest" }
raxis-image-builder     = { path = "crates/image-builder" }
raxis-worktree-provision = { path = "crates/worktree-provision" }
raxis-worktree-staging  = { path = "crates/worktree-staging" }
raxis-image-cache        = { path = "crates/image-cache" }
raxis-planner-core       = { path = "crates/planner-core" }
raxis-artifact-store     = { path = "crates/artifact-store" }
raxis-dashboard          = { path = "crates/dashboard" }
raxis-dashboard-kernel   = { path = "crates/dashboard-kernel" }
raxis-observability      = { path = "crates/observability" }

# Host-side git operations for V2 Step 24 / 24b worktree provisioning
# (Reviewer object copy from Orchestrator's ODB; Orchestrator clone
# from main at base_sha). We use the default features (`basic`,
# `comfort`, `extras` — including `worktree-mutation`, `blob-diff`)
# plus `blocking-network-client` to enable the `file://` transport
# `gix::clone::PrepareFetch::new` requires for local clones. No
# HTTP / SSH transports — the kernel only ever clones from local
# disk paths held in `<data_dir>/`.
gix = { version = "0.83", default-features = true, features = ["blocking-network-client"] }

# Release profile pinned at the workspace root so per-crate
# overrides in `kernel/Cargo.toml` and `gateway/Cargo.toml` are no
# longer ignored by Cargo (which warns on per-package release
# profiles outside the workspace root).
[profile.release]
panic     = "abort"
opt-level = 3
debug     = false
