[package]
# Crate name remains `raxis-cli` because Cargo / crates.io / docs.rs all
# index by package name and renaming would cascade into every workspace
# Cargo.toml. The user-facing binary, however, is plain `raxis` (per the
# v1 review's "operator types `raxis`, not `raxis-cli`" finding).
name        = "raxis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
# `raxis` — the canonical operator binary name. Everything in
# specs/v1/operator-cli.md, the bash completions, and the man pages
# refers to this binary name.
name = "raxis"
path = "src/main.rs"

[dependencies]
raxis-types          = { path = "../crates/types" }
raxis-crypto         = { path = "../crates/crypto" }
raxis-policy         = { path = "../crates/policy" }
raxis-ipc            = { path = "../crates/ipc" }
# Single source of truth for the genesis policy.toml emitted by `raxis genesis`.
# See `crates/genesis-tools/src/lib.rs` for the drift history that motivated
# the extraction. Used only by `commands/genesis.rs`.
raxis-genesis-tools  = { workspace = true }
# Read-only DB handle (`raxis_store::open_ro`) + typed query catalog
# (`raxis_store::views`) for every read-only command. The CLI may
# never write to `kernel.db`, so this dep is intentionally the
# `RoConn`-flavoured surface only — see crates/store/src/views/mod.rs
# §"Hard rules".
raxis-store          = { workspace = true }
# Heartbeat wire shape + atomic reader for `<data_dir>/runtime/
# heartbeat.json`. Lives in its own crate so writer (kernel binary)
# and reader (this CLI) cannot drift on field names.
raxis-runtime        = { workspace = true }
# Shared chain reader (`audit_tools::reader`) — lets `raxis log`,
# `raxis verify-chain`, and the existing `raxis audit verify`
# share one byte-exact JSONL parser instead of three independent
# parsers drifting on `prev_sha256` canonicalisation.
raxis-audit-tools    = { workspace = true }
# `raxis credential` (V2 §4 of `extensibility-traits.md`) is local-only
# (read/write under `<data_dir>/credentials/` and `<data_dir>/providers/`)
# so we depend on the trait crate + the file-backend crate, not on a
# kernel IPC. The CLI never opens the operator socket for these ops.
raxis-credentials      = { workspace = true }
raxis-credentials-file = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
uuid         = { workspace = true }
toml         = { workspace = true }
thiserror    = { workspace = true }
# Used by `commands::status::is_pid_alive` for `kill(pid, 0)` —
# POSIX existence check that doesn't deliver a signal. Already a
# dev-dep on the workspace; promoted to prod here because the
# liveness check is an end-user-visible feature.
libc         = "0.2"

[dev-dependencies]
# `tempfile` for the genesis-emitter round-trip test
# (`tests/genesis_emitter_round_trip.rs`), which writes the emitted policy
# to a tempdir and reads it back through the production loader.
tempfile     = "3"
# Used by `commands::log::tests` to hand-build a byte-correct
# audit segment that exercises the audit-tools chain reader's
# prev_sha256 link verification end-to-end.
sha2         = { workspace = true }
# Used by `reveal::tests` to seed a `kernel.db` with a fixture
# initiative + signed_plan_artifacts row so the audit-on-reveal
# path can be exercised end-to-end without standing up the kernel.
rusqlite     = { workspace = true }
# Cert-mandatory test fixtures: the genesis-emitter round-trip test
# needs a structurally-valid self-signed cert that matches the
# operator pubkey, and `commands::genesis::tests` needs the same.
raxis-test-support = { path = "../crates/test-support" }
