[package]
# Crate name remains `raxis-cli` because Cargo / crates.io / docs.rs all
# index by package name and renaming would cascade into every workspace
# Cargo.toml. The user-facing binary, however, is plain `raxis` (per the
# v1 review's "operator types `raxis`, not `raxis-cli`" finding).
name        = "raxis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
# `raxis` — the canonical operator binary name. Everything in
# specs/v1/operator-cli.md, the bash completions, and the man pages
# refers to this binary name.
name = "raxis"
path = "src/main.rs"

[dependencies]
raxis-types          = { path = "../crates/types" }
raxis-crypto         = { path = "../crates/crypto" }
raxis-policy         = { path = "../crates/policy" }
raxis-ipc            = { path = "../crates/ipc" }
# Single source of truth for the genesis policy.toml emitted by `raxis genesis`.
# See `crates/genesis-tools/src/lib.rs` for the drift history that motivated
# the extraction. Used only by `commands/genesis.rs`.
raxis-genesis-tools  = { workspace = true }
# Read-only DB handle (`raxis_store::open_ro`) + typed query catalog
# (`raxis_store::views`) for every read-only command. The CLI may
# never write to `kernel.db`, so this dep is intentionally the
# `RoConn`-flavoured surface only — see crates/store/src/views/mod.rs
# §"Hard rules".
raxis-store          = { workspace = true }
# Heartbeat wire shape + atomic reader for `<data_dir>/runtime/
# heartbeat.json`. Lives in its own crate so writer (kernel binary)
# and reader (this CLI) cannot drift on field names.
raxis-runtime        = { workspace = true }
# Shared chain reader (`audit_tools::reader`) — lets `raxis log`
# and `raxis verify-chain` share one byte-exact JSONL parser
# instead of two independent parsers drifting on `prev_sha256`
# canonicalisation.
raxis-audit-tools    = { workspace = true }
# `raxis credential` (V2 §4 of `extensibility-traits.md`) is local-only
# (read/write under `<data_dir>/credentials/` and `<data_dir>/providers/`)
# so we depend on the trait crate + the file-backend crate, not on a
# kernel IPC. The CLI never opens the operator socket for these ops.
raxis-credentials      = { workspace = true }
raxis-credentials-file = { workspace = true }
# `raxis doctor signing-key-fp` and `raxis doctor canonical-images`
# (release-and-distribution.md §9.2) consume the kernel-pinned trust
# anchor and the per-role canonical-image verification entry points
# from this crate. The CLI does not write anything; it only renders
# the post-install verification result.
raxis-canonical-images = { workspace = true }
# `raxis doctor cache prune` (image-cache.md §8) consumes the
# production resolver's `prune_unreferenced` walker over both
# `images/sha256/` and `blobs/sha256/`. The CLI builds a fresh
# `reqwest::Client` for the resolver constructor; prune is local
# I/O only so the client is never used for HTTP.
raxis-image-cache      = { workspace = true }
reqwest                = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
uuid         = { workspace = true }
toml         = { workspace = true }
# `plan fmt` (operator-ergonomics §10) canonicalizes plan.toml while
# preserving comments — including `@raxis-default` annotations — at
# their original line positions. The base `toml` crate cannot do this
# round-trip; `toml_edit` exposes the document-preserving API we need.
toml_edit    = "0.22"
thiserror    = { workspace = true }
# `raxis setup` (V2_GAPS §C10) computes a SHA-256 fingerprint of the
# operator-supplied parameters and stores it in `.setup_state.json`
# so subsequent runs can detect drift in inputs without rolling
# forward stale phases.
sha2         = { workspace = true }
# Used by `commands::status::is_pid_alive` for `kill(pid, 0)` —
# POSIX existence check that doesn't deliver a signal. Already a
# dev-dep on the workspace; promoted to prod here because the
# liveness check is an end-user-visible feature.
libc         = "0.2"

[dev-dependencies]
# `tempfile` for the genesis-emitter round-trip test
# (`tests/genesis_emitter_round_trip.rs`), which writes the emitted policy
# to a tempdir and reads it back through the production loader.
tempfile     = "3"
# Used by `reveal::tests` to seed a `kernel.db` with a fixture
# initiative + signed_plan_artifacts row so the audit-on-reveal
# path can be exercised end-to-end without standing up the kernel.
rusqlite     = { workspace = true }
# Cert-mandatory test fixtures: the genesis-emitter round-trip test
# needs a structurally-valid self-signed cert that matches the
# operator pubkey, and `commands::genesis::tests` needs the same.
raxis-test-support = { path = "../crates/test-support" }
