[package]
name        = "raxis-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

# `panic = abort` parity with the kernel: a gateway that has lost the
# invariant of "one process token + one open UDS connection" should never
# attempt unwinding. The kernel's supervisor (Phase A.5) will respawn.
[profile.release]
panic     = "abort"
opt-level = 3
debug     = false

[lib]
name = "raxis_gateway"
path = "src/lib.rs"

[[bin]]
name = "raxis-gateway"
path = "src/main.rs"

[dependencies]
# IPC framing + the GatewayMessage / FetchKind enums that the kernel and
# the gateway both speak. peripherals.md §3.2.
raxis-ipc    = { workspace = true }
raxis-types  = { workspace = true }
# For loading <data_dir>/policy/policy.toml directly (gateway re-validates
# the domain allowlist; it does NOT trust kernel-supplied lists).
# peripherals.md §3.2 "Domain allowlist re-validation".
raxis-policy = { workspace = true }

tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
hex          = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
