[package]
name        = "raxis-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

# `panic = abort` parity with the kernel: a gateway that has lost
# the invariant of "one process token + one open UDS connection"
# should never attempt unwinding. The kernel's supervisor (Phase
# A.5) will respawn. The release profile is pinned at the
# workspace root (`raxis/Cargo.toml [profile.release]`); per-
# package overrides outside the workspace root are ignored (and
# warn).

[lib]
name = "raxis_gateway"
path = "src/lib.rs"

[[bin]]
name = "raxis-gateway"
path = "src/main.rs"


[dependencies]
# IPC framing + the GatewayMessage / FetchKind enums that the kernel and
# the gateway both speak. peripherals.md §3.2.
raxis-ipc    = { workspace = true }
raxis-types  = { workspace = true }
# For loading <data_dir>/policy/policy.toml directly (gateway re-validates
# the domain allowlist; it does NOT trust kernel-supplied lists).
# peripherals.md §3.2 "Domain allowlist re-validation".
raxis-policy = { workspace = true }
# `Backend` trait + provider-view shapes. Lives in its own tiny crate
# so `raxis-test-support::MockBackend` can implement the trait without
# pulling in the rest of the gateway's dependency closure (and creating
# a build-graph cycle through this crate's dev-deps).
raxis-gateway-substrate = { workspace = true }
# `CredentialBackend` trait + the file-backed reference impl. The
# gateway resolves provider credentials through the backend rather
# than reading `<data_dir>/providers/*.toml` directly so a future
# Vault / AWS-SM / Azure-KV operator can swap the backend without
# touching the gateway. `extensibility-traits.md §4.4`.
raxis-credentials       = { workspace = true }
raxis-credentials-file  = { workspace = true }

tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }
hex          = { workspace = true }
# SHA-256 fingerprinting for the gateway-handshake log line —
# emits a non-reversible token fingerprint so operators can
# correlate kernel ↔ gateway logs without leaking the raw token.
sha2         = { workspace = true }
# Constant-time bytes equality for the gateway-token handshake compare —
# closes the timing side-channel on token validation.
subtle       = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
# Production HTTP backend. Unconditional — `HttpBackend` is the sole
# production substrate and the in-memory test fake (`MockBackend`)
# lives in `raxis-test-support`, which is dev-dep-only. The earlier
# `http-backend` cargo feature was removed as part of the V2
# mock-isolation cleanup: a feature flag here meant the production
# binary's behaviour depended on a build flag, which is exactly the
# anti-pattern `philosophy.md` §1.6 warns against.
reqwest      = { workspace = true }

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { workspace = true }
# Cert-mandatory test fixtures: the gateway-roundtrip integration
# test stages a `policy.toml` for the gateway to load, and that
# load now requires a self-signed `[operators.entries.cert]`. The
# helper crate mints structurally-valid certs from deterministic
# test keys.
raxis-test-support = { path = "../crates/test-support" }
raxis-genesis-tools = { workspace = true }
# Cert serialisation + pubkey hex-decoding for the same fixture.
toml = { workspace = true }
hex = { workspace = true }
