[package]
name        = "raxis-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

# Part 2.1: panic = "abort" in release — no unwinding in a trust-critical process.
[profile.release]
panic     = "abort"
opt-level = 3
debug     = false

[[bin]]
name = "raxis-kernel"
path = "src/main.rs"

[dependencies]
# Workspace support crates (the six listed in Part 2.1)
raxis-types       = { workspace = true }
raxis-crypto      = { workspace = true }
raxis-ipc         = { workspace = true }
raxis-policy      = { workspace = true }
raxis-audit-tools = { workspace = true }
raxis-store       = { workspace = true }
# Single source of truth for the genesis policy.toml + chain-anchor audit
# record. See `crates/genesis-tools/src/lib.rs` for the drift-history
# rationale. The kernel calls `render_genesis_policy_toml` and
# `render_genesis_audit_record` from `bootstrap::run_inner`; no other call
# sites in the kernel.
raxis-genesis-tools = { workspace = true }
# Wire shape + atomic write/read for `<data_dir>/runtime/heartbeat.json`.
# Lives in its own crate so the CLI binary can deserialize what the
# kernel writes without depending on the kernel binary.
raxis-runtime       = { workspace = true }
# Trait crate for the agent-runtime substrate. Concrete substrates
# (Firecracker for Linux, AVF for macOS) are pulled in below behind
# the matching `[target.'cfg(target_os = ...)']` blocks per
# `extensibility-traits.md §3.8`.
raxis-isolation     = { workspace = true }
raxis-image-cache   = { workspace = true }
# V2 Step 10 host-side worktree staging — produces the
# `WorkspaceMount` the substrate consumes. Lives in its own crate
# so kernel integration tests can drive the same staging path.
raxis-worktree-staging = { workspace = true }
# `CredentialBackend` trait + `FileCredentialBackend` reference impl.
# The kernel boot constructs the backend from `policy.toml
# [credential_backend]` (default `File`), wraps it in
# `AuditingBackend`, and threads the resulting
# `Arc<dyn CredentialBackend>` through `HandlerContext` so every
# handler that resolves a credential goes through the same
# audited seam. `extensibility-traits.md §4.4`.
raxis-credentials       = { workspace = true }
raxis-credentials-file  = { workspace = true }
# Per-session credential-proxy lifecycle. The kernel constructs one
# `CredentialProxyManager` at boot (sharing the same
# `Arc<dyn CredentialBackend>` as `HandlerContext::credentials`) and
# threads it through `HandlerContext`. At session-spawn time the
# kernel reads `[[tasks.credentials]]` (already parsed by
# `raxis-plan-credentials`) and calls
# `manager.start_for_session(session_id, task_id, &decls)` to bind
# real listeners + emit `CredentialProxyStarted`. At session
# teardown the kernel calls `handles.shutdown()` to abort listeners
# + emit `CredentialProxyStopped`. See
# `specs/v2/credential-proxy.md §2`.
raxis-credential-proxy-manager = { path = "../crates/credential-proxy-manager" }
# Per-session VM-spawn composer. Wraps the
# `(IsolationBackend, CredentialProxyManager, AdmissionService)` tuple
# into a single async-driven service the kernel calls at session-
# spawn / session-terminate time. See `raxis-session-spawn` lib docs
# and `extensibility-traits.md §3.5`.
raxis-session-spawn          = { path = "../crates/session-spawn" }
raxis-egress-admission       = { path = "../crates/egress-admission" }
raxis-plan-credentials  = { path = "../crates/plan-credentials" }
# `DomainAdapter` trait + `GitAdapter` reference impl. Wired into
# `HandlerContext::domain` at boot per `extensibility-traits.md §2.6`.
# The kernel binary monomorphises against the SE binding only —
# future trading / healthcare / robotics kernels swap the adapter
# behind a `cfg`-gated boot-time selector.
raxis-domain            = { workspace = true }
raxis-domain-git        = { workspace = true }
# Compile-time canonical VM image digests + on-disk verification.
# Carries `EXPECTED_REVIEWER_IMAGE_DIGEST` (INV-PLANNER-HARNESS-02)
# and `EXPECTED_ORCHESTRATOR_IMAGE_DIGEST` (INV-PLANNER-HARNESS-05).
# The kernel boot calls `verify_canonical_image` against the
# bundled images at `$RAXIS_INSTALL_DIR/images/...` and surfaces
# `SecurityViolationDetected { kind: "ReviewerImageDigestMismatch" |
# "OrchestratorImageDigestMismatch" }` audit events on mismatch.
raxis-canonical-images  = { workspace = true }

# Async runtime — tokio with explicit feature list per Part 2.1.
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
uuid        = { workspace = true }
ed25519-dalek = { workspace = true }
rusqlite    = { workspace = true }
toml        = { workspace = true }
glob        = { workspace = true }
rustc-hash  = { workspace = true }
arc-swap    = { workspace = true }

# Concrete isolation substrates — platform-gated. The kernel's
# `select_isolation_backend` (`isolation_select.rs`) builds the
# correct one at boot per `extensibility-traits.md §3.8`.
[target.'cfg(target_os = "linux")'.dependencies]
raxis-isolation-firecracker = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
raxis-isolation-apple-vz = { workspace = true }

[dev-dependencies]
tempfile    = "3"
# Dev-only — provides `FakeClock`, `FakeAuditSink`, `mem_store()`. MUST
# stay in `[dev-dependencies]`, never `[dependencies]` (per
# `raxis-test-support` crate-level docs).
raxis-test-support = { path = "../crates/test-support" }
# Dev-only — used by `kernel/tests/kernel_signal_shutdown.rs` to deliver
# SIGTERM via `libc::kill`. Not used by production kernel code (Tokio
# `signal::unix::signal` wraps libc internally already).
libc        = "0.2"
